# QuantVision

./: .env.example  .env.prod.example  .gitignore  LIMITATIONS.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_assets_prices.py  0002_backtests.py  0003_risk_metrics.py  0004_forecasts.py  0005_ml_ranking.py  0006_experiment_tracking.py
backend/app/: config.py  db.py  deps.py  main.py
backend/app/api/: routes_assets.py  routes_backtest.py  routes_experiments.py  routes_exports.py  routes_forecast.py  routes_health.py  routes_ml.py  routes_optimize.py  routes_prices.py
backend/app/core/: errors.py  logging.py  time.py
backend/app/models/: __init__.py  asset.py  backtest.py  experiment_sweep.py  experiment_sweep_run.py  forecast.py  forecast_distribution_bin.py  forecast_path.py  model_prediction.py  model_run.py  portfolio_value.py  price.py  trade.py
backend/app/schemas/: backtest.py  common.py  experiments.py  forecast.py  ml.py  optimization.py
backend/app/services/: experiments.py
backend/scripts/: ingest_prices.py  seed_assets.py
backend/tests/: conftest.py
backend/tests/api/: test_backtest_routes.py  test_experiment_routes.py  test_forecast_routes.py  test_ml_routes.py  test_optimize_routes.py  test_routes.py
backend/tests/integration/: test_backtest_end_to_end.py  test_forecast_runner.py  test_ingest_idempotence.py  test_metrics_persisted.py
backend/tests/unit/: test_engine.py  test_engine_lookahead.py  test_forecast_aggregation.py  test_forecast_engine.py  test_forecast_estimation.py  test_forecast_ml.py  test_ingest.py  (+7 more)
(+84 files in other folders)
