[project]
name = "quantvision-backend"
version = "0.1.0"
description = "QuantVision: portfolio forecasting and strategy simulation platform"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.3",
    "pandas>=2.2.3",
    "numpy==1.26.4",
    "yfinance>=0.2.50",
    "scikit-learn>=1.5.2",
    "scipy>=1.13",
    "xgboost>=2.1.3",
    "python-dateutil>=2.9.0",
    "tenacity>=9.0.0",
    "slowapi>=0.1.9",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "hypothesis>=6.119.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-python-dateutil",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "N806"]
"alembic/env.py" = ["E402"]
"scripts/**" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions/", "tests/"]

[[tool.mypy.overrides]]
module = ["yfinance.*", "xgboost.*", "sklearn.*", "scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"
markers = [
    "integration: tests that require a real Postgres database",
    "slow: tests slower than 1 second",
]
